    + ajout des infos utilisateurs sur l'état d'activation/désactivation
    du daemon docker
  * [DEV] Ajout de la fonctionnalité d'installation de docker sur Ubuntu
    et Debian
  * [DEV] Correction du bug d'install de docker
  * [DEV] Correction du bug d'install de docker - bis
  * [DEV] Correction du bug d'install de docker - ter
  * [DEV] Correction d'un bug àlc pour un ';' manquant...
  * [DEV] Correction du test de la présence de docker
  * [DEV] Correction de l'installeur docker
  * [DEV] Correction de l'installeur docker - bis
  * [DEV] Correction de l'installeur docker - ter
  * [DEV] Correction de l'installeur docker - pfff
  * [DEV] Modification des modalités de sortie de l'installeur docker
  * [DEV] Correction d'un problème d'accès aux commandes inist-tools en
    tant que root
  * [DEV] Ajout de l'executable 'inistexec' dans le paquet distribué
  * [DEV] Ajout de l'installation de lsb-release sur Debian s'il est
    absent
  * [DEV] Amélioration de la fonction de détection de la version de
    Debian installée
  * [DEV] Proxy pour apt-key
  * [DEV] Proxy pour apt-key
  * [DEV] bug àlc
  * [DEV] Màj doc en-ligne
  * [DEV] Correction du 'bug' (workaround) lié à 'logname' dont le
    résultat est fantaisiste dans une console graphique sous Ubuntu
    16.04
  * [DEV] Màj README.md
  * [DEV] Modification du message d'info
  * [DEV] Remplacement de 'env' par 'shell' (plus parlant)
  * [DEV] Remplacement de 'env' par 'shell' (plus parlant) -- bis
  * [DEV] Documentation de 'inist docker install'
  * [DEV] Commit -- 14/11/2016 @ 09:12:00
  * [DEV] Correction : bug sur la persistance des options pour
    shell/system + bug d'affichage du status pour shell/system
  * [DEV] Ajout d'une valeur par défaut à vide pour DOCKER_OPTS_CUSTOM
  * [DEV] Correction de nombreux bugs dans docker-install + démasquage
    des logs d'installation pour analyse

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200