@@ -40,6 +40,16 @@ chmod -R 755 "$DIR_INSTALL"
 #-------------------------------------------------------------------------------
 fakeroot dpkg-deb --build "$DIR_INSTALL" "$DIR_RELEASES/inist-tools_$MODULE_VERSION_FOR_CONTROL.deb"
 
+#-------------------------------------------------------------------------------
+# Création de la copie pour le lien « latest »
+#-------------------------------------------------------------------------------
+if [ -a "$DIR_RELEASES/inist-tools_#latest.deb" ]; then
+  git rm "$DIR_RELEASES/inist-tools_#latest.deb"
+fi
+
+cp "$DIR_RELEASES/inist-tools_$MODULE_VERSION_FOR_CONTROL.deb" "$DIR_RELEASES/inist-tools_#latest.deb"
+git add "$DIR_RELEASES/inist-tools_#latest.deb"
+
 # ------------------------------------------------------------------------------
 # FIN !
 # ------------------------------------------------------------------------------
